--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp-swig": "^0.7.4",
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.6",
+    "merge-stream": "^1.0.0",
     "node-libs-browser": "^0.5.2",
     "node-sass": "^3.2.0"
   }
