--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "gulp-swig": "^0.7.4",
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.6",
+    "gulp-webpack": "^1.5.0",
     "merge-stream": "^1.0.0",
     "node-libs-browser": "^0.5.2",
-    "node-sass": "^3.2.0"
+    "node-sass": "^3.2.0",
+    "webpack-stream": "^2.1.0"
   }
 }
