--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "gulp-autoprefixer": "^2.3.1",
     "gulp-concat": "^2.6.0",
     "gulp-gm": "0.0.8",
-    "gulp-inline-resize": "^0.1.5",
+    "gulp-inline-resize": "^0.1.6",
     "gulp-newer": "^0.5.1",
     "gulp-plumber": "^1.0.1",
     "gulp-sass": "^2.0.4",
@@ -19,10 +19,9 @@
     "gulp-swig": "^0.7.4",
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.6",
-    "gulp-webpack": "^1.5.0",
     "merge-stream": "^1.0.0",
     "node-libs-browser": "^0.5.2",
     "node-sass": "^3.2.0",
-    "webpack-stream": "^2.1.0"
+    "webpack": "^1.12.1"
   }
 }
