--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ logs
 pids
 *.pid
 *.seed
+.vscode 
 
 # Dependency directory
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
