--- a/package.json
+++ b/package.json
@@ -7,15 +7,35 @@
   "license": "MIT",
   "devDependencies": {
     "browser-sync": "^2.7.13",
-    "gulp": "^3.9.0",
     "gulp-autoprefixer": "^2.3.1",
     "gulp-concat": "^2.6.0",
+    "gulp-gm": "0.0.8",
+    "gulp-htmlmin": "^1.2.0",
+    "gulp-inline-resize": "^0.1.6",
+    "gulp-newer": "^0.5.1",
     "gulp-sass": "^2.0.4",
-    "gulp-sourcemaps": "^1.5.2",
     "gulp-swig": "^0.7.4",
     "gulp-uglify": "^1.2.0",
-    "gulp-util": "^3.0.6",
+    "merge-stream": "^1.0.0",
     "node-libs-browser": "^0.5.2",
-    "node-sass": "^3.2.0"
+    "node-sass": "^3.2.0",
+
+
+
+
+    "autoprefixer": "^6.5.1",
+    "bower": "^1.7.9",
+    "bower-installer": "^1.2.0",
+    "browser-sync": "^2.11.0",
+    "cssnano": "^3.7.7",
+    "gulp": "^3.9.1",
+    "gulp-livereload": "^3.8.1",
+    "gulp-plumber": "^1.0.1",
+    "gulp-postcss": "^6.2.0",
+    "gulp-sass": "^2.3.2",
+    "gulp-sourcemaps": "^2.1.1",
+    "gulp-util": "^3.0.7",
+    "vinyl-ftp": "^0.4.5",
+    "webpack": "^1.12.9"
   }
 }
