--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 .DS_Store
-public
-
+dist
 
 # Logs
 logs
@@ -10,6 +9,7 @@ logs
 pids
 *.pid
 *.seed
+.vscode 
 
 # Dependency directory
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
